Fixed horizontal overflow

--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -1,3 +1,7 @@
+.navbar {
+    padding: 0 !important;
+}
+
 @media (max-width: 768px) {
     .headerNav {
         justify-content: center;
